--- a/ORT/html/index.html
+++ b/ORT/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Big Adventure - Oxford Reading Tree</title>
+    <title>The Big Adventure</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -17,7 +17,7 @@
         <div class="book">
             <!-- Cover Page -->
             <div class="page active" id="page-cover">
-                <h2 class="subtitle">Oxford Reading Tree</h2>
+                
                 <img src="downloads/cover.png" alt="Cover - Biff, Chip and Kipper" class="story-image">
                 <p class="story-text">Join Biff, Chip, Kipper, and their dog Floppy on an exciting adventure at the park!</p>
                 <div class="audio-controls">
