--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <ul class="nav-list">
                         <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="ORT" class="nav-link">Children's Story</a></li>
+                        <li class="nav-item"><a href="Latin-Vocab-Shadcn/public/index.html" class="nav-link">Latin Vocabulary</a></li>
                         <li class="nav-item"><a href="#examples" class="nav-link">Examples</a></li>
                     </ul>
                 </nav>
@@ -66,6 +67,18 @@
                         </div>
                     </div>
                     <!-- Placeholder for future examples -->
+                    <div class="example-card">
+                        <div class="example-card-content">
+                            <h3 class="example-title">Latin Vocabulary Learning</h3>
+                            <p class="example-description">
+                                An interactive Latin vocabulary learning app with spaced repetition, multiple choice and fill-in-the-blank exercises, and progress tracking.
+                            </p>
+                            <a href="Latin-Vocab-Shadcn/public/index.html" class="example-link">
+                                View Example
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+                            </a>
+                        </div>
+                    </div>
                     <div class="example-card coming-soon">
                         <div class="example-card-content">
                             <h3 class="example-title">Coming Soon</h3>
@@ -96,6 +109,7 @@
                         <ul class="footer-links-list">
                             <li><a href="#examples">Examples</a></li>
                             <li><a href="ORT/index.html">Children's Story</a></li>
+                            <li><a href="Latin-Vocab-Shadcn/public/index.html">Latin Vocabulary</a></li>
                         </ul>
                     </div>
                 </div>
