--- a/Latin-Vocab-Shadcn/public/index.html
+++ b/Latin-Vocab-Shadcn/public/index.html
@@ -16,11 +16,11 @@
   <div id="app" class="container mx-auto p-4 max-w-5xl">
     <!-- Header -->
     <header class="bg-white rounded-lg shadow-md p-4 mb-6">
-      <div class="flex justify-between items-center">
-        <h1 class="text-3xl font-bold text-gray-800">
+      <div class="flex flex-col sm:flex-row justify-between items-center">
+        <h1 class="text-3xl font-bold text-gray-800 mb-4 sm:mb-0">
           <span class="text-purple-600">Latin</span> Vocabulary
         </h1>
-        <div id="user-section">
+        <div id="user-section" class="w-full sm:w-auto">
           <!-- Login Form (shown when not logged in) -->
           <div id="login-form" class="flex items-center space-x-2">
             <input type="text" id="username-input" placeholder="Username" 
@@ -31,9 +31,9 @@
           </div>
           
           <!-- User Info (shown when logged in) -->
-          <div id="user-info" class="hidden flex items-center space-x-2">
+          <div id="user-info" class="hidden flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 w-full sm:w-auto">
             <span class="text-gray-700">Logged in as: <span id="current-user" class="font-bold"></span></span>
-            <button id="logout-btn" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-md hover:bg-gray-300 transition">
+            <button id="logout-btn" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-md hover:bg-gray-300 transition w-full sm:w-auto">
               Logout
             </button>
           </div>
